[package]
name = "to_remarkable_bot"
version = "0.1.0"
authors = ["dskleingeld <dskleingeldgmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.0-alpha.2", features = ["blocking"]}
serde_json = "1.0"
serde = "1"
snafu = "0.6.0"

actix-web = "1.0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
dialoguer = "0.5.0"
chrono = "0.4"
zip = "0.5.3"